crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__hardened_tests__lock_file_after_set_plan_id.snap
---
source: crates/shipper-core/src/ops/lock/mod.rs
expression: json
---
{
  "pid": 42,
  "hostname": "build-host",
  "acquired_at": "2025-01-15T12:00:00Z",
  "plan_id": "updated-plan-456"
}
