crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__hardened_tests__lock_info_json_key_order.snap
---
source: crates/shipper-core/src/ops/lock/mod.rs
expression: json
---
{
  "pid": 1,
  "hostname": "h",
  "acquired_at": "2025-06-01T00:00:00Z",
  "plan_id": "p"
}
